# API

./: .env.docker  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 4a18bf358b54_колонка_gif_count_удалена_из_таблицы_.py  f67e8375822f_create_initial_tables.py
app/: database.py  main.py  models.py  schemas.py
app/crud/: __init__.py  base.py  gifs.py  tag.py  user_gif_tag.py  users.py
app/routers/: search.py  user.py
app/services/: __init__.py  user_services.py
app/utils/: __init__.py  sqlalchemy_helpers.py
crud/: __init__.py  base.py  gifs.py  tag.py  user_gif_tag.py  users.py
routers/: search.py  user.py
services/: __init__.py  user_services.py
tests/: test_db.py
utils/: __init__.py  sqlalchemy_helpers.py
