[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncpg>=0.30.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "environs==14.3.0",
    "fastapi==0.116.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "marshmallow==4.0.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg[binary]>=3.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
